src/objects/featfinder__Filter__c.object
<CustomObject>
    <fields>
        <fullName>featfinder__Column__c</fullName>
        <label>Column</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>featfinder__FilterDetail__c</fullName>
        <label>Filters Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>featfinder__Filter_Name__c</fullName>
        <label>Filter Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>featfinder__FormulaLogic__c</fullName>
        <label>Formula Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>featfinder__Formula__c</fullName>
        <label>Formula</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>featfinder__Releases__c</fullName>
        <label>Releases</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>featfinder__Value__c</fullName>
        <label>Value</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>featfinder__query__c</fullName>
        <label>query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Filter</label>
    <nameField>
        <label>Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>